dataset1235/2025-2/610742602/users/2573334520/executions/677928262_2383239197.log
== RUN (2025-08-28 20:07:47)
-- CODE: 
from math import *
a=float(input())
b=float(input())
c=float(input())
r=math.radians(c)
k=sqrt(a**2+b**2-2*a*b*cos(r))
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=math.radians(c)
      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=math.radians(c)
      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=math.radians(c)
      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=math.radians(c)
      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=math.radians(c)
      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=math.radians(c)
      ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:03:05)
-- CODE: 
from math import *
a=float(input())
b=float(input())
c=float(input())
k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
print(k)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
      ^^^^^^^^^^^^^
NameError: name 'raiz_quadrada' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
      ^^^^^^^^^^^^^
NameError: name 'raiz_quadrada' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
      ^^^^^^^^^^^^^
NameError: name 'raiz_quadrada' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
      ^^^^^^^^^^^^^
NameError: name 'raiz_quadrada' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
      ^^^^^^^^^^^^^
NameError: name 'raiz_quadrada' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    k=raiz_quadrada(a**2+b**2-2*a*b*cos(c))
      ^^^^^^^^^^^^^
NameError: name 'raiz_quadrada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:09:00)
-- CODE: 
from math import *
a=float(input())
b=float(input())
c=float(input())
r=radians(c)
k=sqrt(a**2+b**2-2*a*b*cos(r))
print(round(k,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
